--- a/style.css
+++ b/style.css
@@ -1,12 +1,44 @@
-/* Estilos CSS para o formulário */
 form {
-/* Estilos do formulário */
-background-color: blue;
-border: 1px red solid;
-border-radius: 10px;
+    background-color: white;
+    padding: 0.25rem;
+    border: 1px #28C344 solid;
+    border-radius: 10px;
+
+    > * {
+        display: flex;
+        height: 2rem;
+        margin-bottom: 0.2rem;
+    }
 }
 
-input {
-/* Estilos dos campos de entrada */
-color: red
+form label {
+    background-color: #E4F7E9;
+    flex: 1;
+    min-width: fit-content;
+    padding-left: 0.5rem;
+    font-weight: bold;
+}
+
+form input{
+    flex: 3;
+    margin-left: 0.2rem;
+    border-style: inset;
+    border-color: lightgray;
+    height: fit-content;
+}
+
+form span{
+    flex: 3;
+    margin-left: 0.2rem;
+    padding-right: 8px;
+    border: unset;
+}
+
+form button {
+    background-image: linear-gradient(#AEC3E5, #26C343);
+    border-radius: 1rem;
+    border: 1px grey solid;
+    color: white;
+    font-weight: bold;
+    text-shadow: 0 -1px 1px black;
 }
